--- a/leftwm/themes/night-sky/template.liquid
+++ b/leftwm/themes/night-sky/template.liquid
@@ -9,7 +9,7 @@
 %{A}
 {% elsif tag.visible  %}
 %{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}
-%{F#000000}%{B#FFFFFF}  {{tag.name}}  %{B-}%{F-}
+%{F#000000}%{B#BBFFBB}  {{tag.name}}  %{B-}%{F-}
 %{A}
 {% elsif tag.busy %}
 %{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}
